Merged revisions 610889-627830 via svnmerge from https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk
................
  r610891 | vhennebert | 2008-01-10 20:34:13 +0100 (Thu, 10 Jan 2008) | 2 lines
  
  Removed accumulatedBPD which is redundant with yoffset
................
  r610893 | vhennebert | 2008-01-10 20:35:24 +0100 (Thu, 10 Jan 2008) | 2 lines
  
  The return value of addAreasAndFlushRow is never used, changed it to void
................
  r610905 | vhennebert | 2008-01-10 20:57:29 +0100 (Thu, 10 Jan 2008) | 2 lines
  
  Renamed lastRow into currentRow and yoffset into currentRowOffset
................
  r611114 | jeremias | 2008-01-11 10:04:28 +0100 (Fri, 11 Jan 2008) | 2 lines
  
  Bugfix: Some string objects were not encrypted (for example in named destinations)
  I had to refactor the PDF library a little bit but since it only affects the inner API it shouldn't be a problem that I removed some methods which caused trouble because a didn't think about encryption when I worked on the PDF library last year.
................
  r611142 | jeremias | 2008-01-11 12:13:42 +0100 (Fri, 11 Jan 2008) | 3 lines
  
  Initialized merge tracking via "svnmerge" with revisions "1-594557" from 
  https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_ImagePackageRedesign
................
  r611175 | jeremias | 2008-01-11 14:41:54 +0100 (Fri, 11 Jan 2008) | 4 lines
  
  Removed merge tracking for "svnmerge" for 
  https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_ImagePackageRedesign
  
  (I'm not happy with the result)
................
  r611278 | jeremias | 2008-01-11 20:50:53 +0100 (Fri, 11 Jan 2008) | 925 lines
  
  Merged branch https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_ImagePackageRedesign (revs 594558 to 611138) into Trunk:
  A new image loading framework has been introduced to fix various problems with external graphics and improve performance.
  
  Switched to Batik 1.7.
  Added xml-apis-ext.jar as needed by Batik 1.7.
 