@@ -32,12 +32,12 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.URIResolver;
 import javax.xml.transform.stream.StreamSource;
 
-// commons logging
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.apache.fop.util.DataURIResolver;
 
 import org.apache.xmlgraphics.util.io.Base64EncodeStream;
+
+import org.apache.fop.util.DataURIResolver;
 
 /**
  * Provides FOP specific URI resolution. This is the default URIResolver
@@ -132,10 +132,23 @@ public class FOURIResolver implements javax.xml.transform.URIResolver {
         // Fallback to default resolution mechanism
         if (source == null) {
             URL absoluteURL = null;
-            File file = new File(href);
+            int hashPos = href.indexOf('#');
+            String fileURL, fragment;
+            if (hashPos >= 0) {
+                fileURL = href.substring(0, hashPos);
+                fragment = href.substring(hashPos);
+            } else {
+                fileURL = href;
+                fragment = null;
+            }
+            File file = new File(fileURL);
             if (file.canRead() && file.isFile()) {
                 try {
-                    absoluteURL = file.toURL();
+                    if (fragment != null) {
+                        absoluteURL = new URL(file.toURL().toExternalForm() + fragment);
+                    } else {
+                        absoluteURL = file.toURL();
+                    }
                 } catch (MalformedURLException mfue) {
                     handleException(mfue, "Could not convert filename '" + href
                             + "' to URL", throwExceptions);
